--- a/_data/cursada_actual/16.yml
+++ b/_data/cursada_actual/16.yml
@@ -10,8 +10,8 @@ descripcion: |
   - **CLASE ESPECIAL LENGUAJES**<br>
   Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) <br>
 
-  ### Jueves 23 de Noviembre 8:00hs VIRTUAL
-  - **ENTREGA FINAL Y DEFENSA de TP Game Grupal  >**[**Link**](https://meet.google.com/dbv-mcay-wki)  **<**<br>
+  ### Jueves 23 de Noviembre
+  - **ENTREGA FINAL Y DEFENSA de TP Game Grupal** <br>
   
   ### Jueves 23 de Noviembre 18:00hs VIRTUAL
   - **CLASE DE CONSULTA SOLO para quienes deben rendir Integrador  >**[**Link**](https://meet.google.com/dbv-mcay-wki)  **<**<br>
