--- a/_data/cursada_actual/16.yml
+++ b/_data/cursada_actual/16.yml
@@ -11,7 +11,7 @@ descripcion: |
   Laboratorio MA-109 en 1er piso edificio Malvinas Argentinas (Origone 101) <br>
 
   ### Jueves 23 de Noviembre
-  - **ENTREGA FINAL Y DEFENSA de TP Game Grupal** <br>
+  - **ENTREGA FINAL de TP Game Grupal** <br>
   
   ### Jueves 23 de Noviembre 18:00hs VIRTUAL
   - **CLASE DE CONSULTA SOLO para quienes deben rendir Integrador  >**[**Link**](https://meet.google.com/dbv-mcay-wki)  **<**<br>
