--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -1,6 +1,13 @@
 descripcion: |
   Hola!
-  Durante esta semana, vamos a comenzar a trabajar con **GIT**. Para eso, vas a tener que clonarte el repositorio aceptando la asignación que figura más abajo como **GIT - Presentación Personal**. Si aún no estás registrado en github, en el momento que intentes aceptar la asignación se te indicará como registrarte. Es muy importante que tomes nota del usuario con el que te vas a registrar, el email y la contraseña. Luego veremos que también será necesario generar un token para utilizar GIT en tu PC o en las PCs de la Universidad. Te dejamos un video de una clase donde vimos el paso a paso sobre como registrarse y usar GIT.
+  ¡Te damos la bienvenida a la primer semana de cursada de Programación con Objetos 1!
+  Todos los días lunes se publicará en este espacio el material de la semana en curso, donde encontrarás los videos de apoyo a la teoría, videos de clases virtuales, los ejercicios a realizar y los temas que vamos a estar viendo.
+  
+  Durante esta semana, vamos a comenzar a trabajar con **GIT**. Para eso, vas a tener que clonarte el repositorio **Aceptando la asignación** que figura más abajo como **GIT - Presentación Personal**. El link te lleva directamente a la plataforma Github, que será el manejador de versiones de software y contenedor de los repositorios que iremos produciendo durante la cursada. Es **fundamental** que desde la primer clase tengas dado de alta el usuario personal e intransferible que te servirá para presentar los trabajos prácticos tanto individuales como grupales. 
+  Si ya tenías usuario de github, podés utilizarlo para esta cursada, y si no tenés usuario, en el momento que intentes aceptar la asignación, la misma aplicación te guiará en el proceso de registración. Es muy importante que tomes nota del usuario con el que te vas a registrar, el email y la contraseña. Luego veremos que también será necesario que generes un token, pero vamos de a poco. Te dejamos un video de una clase donde vimos el paso a paso sobre como registrarse y usar GIT.
+  
+  También comenzaremos a conocer los objetos y mensajes en el paradigma de objetos. Más abajo encontrarás videos que nos intruducen en el tema.
+
 
 videos:
   - nombre: Qué es un objeto, qué es un mensaje
@@ -15,6 +22,6 @@ videos:
   
 ejercicios:
   - name: GIT - Presentación Personal
-    classroom: https://classroom.github.com/a/9BSamoWd
+    classroom: https://classroom.github.com/a/lgNZCA7l
     comentarios: 
-      - name: Aceptar la asignación y entregar realizando directamente commit en Github en tu reposotorio inidividual del Class-room, luego de editar el archivo README.md con tus datos personales. Les dejo de ejemplo la presentación de Branko, aunque esperamos que nos sorprendan con algo bien personal y creativo ;-) [PresentaBranko](https://github.com/obj1-unahur-2023s1/presentacion-personal-BrankoMuruaga.git){:target="_blank"}
+      - name: Aceptar la asignación y luego clonar el repositorio inidividual del Class-room. Editar en tu PC el archivo README.md con tus datos personales y luego entregar realizando el push en el repositorio de github. Te dejamos de ejemplo la presentación de Branko, aunque esperamos que nos sorprendas con algo bien personal y creativo ;-) [PresentaBranko](https://github.com/obj1-unahur-2023s1/presentacion-personal-BrankoMuruaga.git){:target="_blank"}
