--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -20,10 +20,10 @@ videos:
 conferencia: 
 
   horario0: <br>
-            --> **Martes 25 de Marzo** > **PRESENCIAL** a partir de las **18.00hs.** - Laboratorio a designar <br>
-            --> **Sábado 30 de Marzo** > **VIRTUAL** a partir de las **10.00hs.** -> [**Link a la clase**](https://meet.google.com/dbv-mcay-wki) <br>
+            --> **Martes 25 de Marzo** > **PRESENCIAL** a partir de las **18.00hs.** - Aula JS-103 (Edificio Justicia Social 1er.piso) <br>
+            --> **Sábado 30 de Marzo** > **VIRTUAL** a partir de las **10.00hs.** -> **Link a Confirmar** <br>
   
   horario1: <br>
-            --> **Miércoles 26 de Marzo** > **PRESENCIAL** a partir de las **8.00hs.** - Laboratorio a designar <br>
-            --> **Sábado 30 de Marzo** > **VIRTUAL** a partir de las **10.00hs.** -> [**Link a la clase**](https://meet.google.com/dbv-mcay-wki) <br>
+            --> **Miércoles 26 de Marzo** > **VIRTUAL** a partir de las **8.00hs.** -> [**Link a la clase**](https://meet.google.com/wxc-ioxx-nah) <br>
+            --> **Sábado 30 de Marzo** > **VIRTUAL** a partir de las **10.00hs.** -> **Link a Confirmar** <br>
   
