--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -20,7 +20,7 @@ videos:
 conferencia: 
 
   horario0: <br>
-            --> **Martes 26 de Marzo** > **PRESENCIAL** **18.00hs.** - Aula JS-103 (Edificio Justicia Social 1er.piso) <br>
+            --> **Martes 26 de Marzo** > **PRESENCIAL** **18.00hs.** - Aula TA-209 (Edificio Trabajo Argentino 2do.piso) <br>
             --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> **Link a Confirmar** <br>
   
   horario1: <br>
