actualización link clase sabado

--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -21,14 +21,14 @@ conferencia:
 
   horario0: <br>
             --> **Martes 26 de Marzo** > **PRESENCIAL** **18.00hs.** - Aula TA-209 (Edificio Trabajo Argentino 2do.piso) <br>
-            --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> **Link a Confirmar** <br>
+            --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> [**Link a la clase**](https://us06web.zoom.us/j/88953425033) <br>
   
   horario1: <br>
             --> **Miércoles 27 de Marzo** > **VIRTUAL** **8.00hs.** -> [**Link a la clase**](https://meet.google.com/wxc-ioxx-nah) <br>
-            --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> **Link a Confirmar** <br>
+            --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> [**Link a la clase**](https://us06web.zoom.us/j/88953425033) <br>
   
   horario2: <br>
             --> **Martes 26 de Marzo** > **VIRTUAL** **18.00hs.** -> [**Link a la clase**](https://meet.google.com/wxc-ioxx-nah) <br>
-            --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> **Link a Confirmar** <br>
+            --> **Sábado 30 de Marzo** > **VIRTUAL** **10.00hs.** -> [**Link a la clase**](https://us06web.zoom.us/j/88953425033) <br>
   
   
