--- a/_data/cursada_actual/01.yml
+++ b/_data/cursada_actual/01.yml
@@ -16,7 +16,7 @@ videos:
     url: https://youtu.be/7hXl2kJs2GUs
   - nombre: Definimos un objeto
     url: https://youtu.be/aAfjr8-1-0Y
-  - nombre: Video clase virtual día sábado 30/3/24 **(Nuevo)**
+  - nombre: Video clase virtual día sábado 30/3/24
     url: https://youtu.be/I3ZtFk38_Wg
 
 
