--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -52,7 +52,7 @@ ejercicios:
       - name: Aceptar la asignación y entregar realizando directamente commit en Github en tu reposotorio inidividual del Class-room, luego de editar el archivo README.md con tus datos personales. Les dejo de ejemplo la presentación de Branko, aunque esperamos que nos sorprendan con algo bien personal y creativo ;-) [PresentaBranko](https://github.com/obj1-unahur-2023s1/presentacion-personal-BrankoMuruaga.git){:target="_blank"}
 
   - name: El Lobo Feroz
-    classroom: https://classroom.github.com/a/hlbLeLzn
+    classroom: https://classroom.github.com/a/p5gGGk2M
     comentarios:
       - name: Aceptar la asignación y luego al generarse el repositorio, copiar la dirección del mismo para realizar el clonado en la PC donde irán a realizar la práctica en el IDE de Wollok. 
 
