--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -28,7 +28,7 @@ videos:
   - nombre: Ejercicio "Gustos" - comentarios para encararlo
     url: https://youtu.be/dRy92EB4ppM
   - nombre: Como aceptar una asignación de un ejercicio en Github y realizar luego el push al repo personal
-    url: https://youtu.be/jTuVrHznu2g
+    url: https://youtu.be/Ch89-U9QpWY
 
 conferencia: 
 
