--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -12,7 +12,6 @@ descripcion: |
   Vamos a comenzar a trabajar con **GIT**. Para eso, deberán "clonarse" el repositorio aceptando la asignación que figura más abajo como **GIT - Presentación Personal**. Si aún no estás registrado en github, en el momento que intentes aceptar la asignación se te indicará como registrarte. Es muy importante que tomes nota del usuario con el que te vas a registrar, el email y la contraseña. Luego veremos que también será necesario generar un token para utilizar GIT en tu PC o en las PCs de la Universidad. 
 
   Por último, les dejamos los ejercicios de esta semana, que deberán realizar en el IDE de Wollok aceptando la asignación, y luego clonándose el repositorio en sus PCs. Lo resuelven en Wollok, y luego suben la solución realizando el push. Les dejamos un video corto explicando el procedimiento. <br>
-  **¡A trabajar!** <br>
 
 videos:
   - nombre: Agregándole métodos a Pepita
@@ -33,7 +32,7 @@ videos:
 conferencia: 
 
   horario0: <br>
-            --> **Martes 2 de Abril** > **FERIADO no hay Clases** - Aprovechen el día para realizar los ejercicios <br>
+            --> **Martes 2 de Abril** > **FERIADO no hay Clases** <br>
             --> **Sábado 6 de Abril** > **VIRTUAL** **10.00hs.** -> [**Link a la clase**](https://us06web.zoom.us/j/88953425033) <br>
   
   horario1: <br>
@@ -41,7 +40,7 @@ conferencia:
             --> **Sábado 6 de Abril** > **VIRTUAL** **10.00hs.** -> [**Link a la clase**](https://us06web.zoom.us/j/88953425033) <br>
   
   horario2: <br>
-            --> **Martes 2 de Abril** > **FERIADO no hay Clases** - Aprovechen el día para realizar los ejercicios <br>
+            --> **Martes 2 de Abril** > **FERIADO no hay Clases** <br>
             --> **Sábado 6 de Abril** > **VIRTUAL** **10.00hs.** -> [**Link a la clase**](https://us06web.zoom.us/j/88953425033) <br>
   
 
