--- a/_data/cursada_actual/02.yml
+++ b/_data/cursada_actual/02.yml
@@ -1,4 +1,13 @@
 descripcion: |
+  **ATENCIÓN:**
+  Debido al gran número de estudiantes inscritos en la Comisión 1 UNAHUR turno noche, 
+  hemos decidido dividirla en dos grupos para asegurar una experiencia educativa más 
+  efectiva y personalizada. Esta medida permitirá que, al menos cada 15 días los martes, 
+  puedan asistir a clases PRESENCIALES en los laboratorios de la universidad, contribuyendo significativamente a su aprendizaje práctico 
+  y desarrollo de las habilidades; irán alternando entre virtual y presencial (**NO es optativa la modalidad**).  
+  Agradecemos su comprensión y cooperación. En la planilla que está en el link de **Seguimiento** (esquina superior derecha de esta página) encontrarán el detalle. Cualquier duda nos pueden escribir en Discord.
+  
+
   En esta semana, empezamos a armar programas en los que intervienen varios objetos, y estudiar cómo pueden relacionarse entre ellos.
   En particular, vamos a ver qué es el **polimorfismo** en objetos, y a empezar a hablar de las ventajas que nos da para construir programas. 
   Relacionado con esto, también vamos a hablar de cómo se refleja la idea de **contrato** en la programación con objetos.
